Fix 7-day price charts cutting off on small screen sizes

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -284,7 +284,7 @@ td {
     //height: 39px;
   }
   td .canvasjs-chart-container {
-    width: 96px;
+    // width: 96px;
     height: 64px;
   }
   td .chart-container {
